nymea-plugins (1.7.102) buster focal jammy; urgency=medium

* Keba discovery updated to recognize new models.

 -- Sebastian Ringer <s.ringer@consolinno.de> Di, 2 Apr 2024 16:53:53 +0200

nymea-plugins (1.7.101) buster focal jammy; urgency=medium

* EV charger interface fix

 -- Leonhard Heizinger <l.heizinger@consolinno.de> Fr, 9 Feb 2024 7:50:53 +0200

nymea-plugins (1.7.100-2) buster focal jammy; urgency=medium

* Adapt to new versioning schema

 -- Florian Knab <f.knab@consolinno.de> Thu, 19 Sep 2023 7:50:53 +0200

nymea-plugins (1.7.100-1) jammy; urgency=medium

  * Add plugin for kostal pico inverter

 -- Michael Menner <m.menner@consolinno.de>  Wed, 23 Aug 2023 10:00:41 +0100

nymea-plugins (1.7.0) jammy; urgency=medium

  [ Michael Zanetti ]
  * Netatmo: Add min/max values for co2 sensors
  * Add support for Shelly Plus 2PM
  * EVBox: Rework plugin to allow addressing multiple boxes on same bus

  [ Simon Stürz ]
  * Fronius: Set energy live states to 0 if not connected
  * go-eCharger: Set energy live states to 0 if not connected
  * Keba: Set energy live states to 0 if not connected
  * mystrom: Set current power to 0 if not connected
  * powerfox: Set current power to 0 if not connected
  * solarlog: Set energy states to 0 if not connected

  [ Michael Zanetti ]
  * AQI: Add min/max values to pressure state
  * Netatmo: Add min/max values to pressure state
  * SensorTag: Add min/max to pressure state
  * New plugin: Notify.Events
  * Kodi: Rework setup
  * Update python plugin dependencies to include dependabot alerts
  * Shelly: Workaround bad counter values
  * PushNotifications: Add more options for sending push notifications
  * Shelly plus plug s

 -- jenkins <developer@nymea.io>  Tue, 07 Mar 2023 19:21:45 +0100

nymea-plugins (1.6.3) jammy; urgency=medium


 -- jenkins <developer@nymea.io>  Wed, 01 Feb 2023 12:17:57 +0100

nymea-plugins (1.6.2) jammy; urgency=medium

  [ Michael Zanetti ]
  * go-e: Improve error messages